# internal/api/user/user.go
@@ -55,7 +55,7 @@ func Login(c echo.Context) error {
 	return c.JSON(http.StatusBadRequest, echo.Map{"token": t, "user": user})
 }
 
-// @Summary Login
+// @Summary Register
 // @Description Üyelerin kayıt yapmasını sağlar adres bilgisini kayıt eder, user detay bilgilerini kayıt eder.
 // @Tags user
 // @Param body body request.UserRegister false " "
@@ -68,7 +68,7 @@ func Register(c echo.Context) error {
 	}
 	password, _ := bcrypt.GenerateFromPassword([]byte(req.Password), 4)
 
-	existsPhone := repository.Get().User().ExistsPhone(req.Phone)
+	existsPhone := repository.Get().User().ExistsPhone(req.Phone, 0)
 	if existsPhone {
 		return c.JSON(http.StatusBadRequest, echo.Map{"message": "bu telefon numarası kullanılmaktadır."})
 	}
@@ -108,4 +108,58 @@ func Register(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, echo.Map{"message": "kayıt yapılamadı"})
 	}
 	return c.JSON(http.StatusOK, helpers.Response(nil, "oluşturma başarılı"))
+}
+
+// @Summary Update
+// @Description üyenin bilgilerini günceller
+// @Tags user
+// @Param body body request.UserUpdate false " "
+// @Router /user/update [put]
+func Update(c echo.Context) error {
+	var req request.UserUpdate
+	if helpers.Validator(&c, &req) != nil {
+		return nil
+	}
+
+	user := helpers.Auth(&c)
+
+	if req.Name != "" {
+		user.Name = req.Name
+	}
+	if req.Surname != "" {
+		user.Surname = req.Surname
+	}
+	if req.Phone != "" {
+		dublicatePhone := repository.Get().User().ExistsPhone(req.Phone, user.ID)
+		if dublicatePhone {
+			return c.JSON(http.StatusBadRequest, helpers.Response(nil, "Bu telefon kullanılmakta."))
+		}
+		user.Phone = req.Phone
+	}
+	if req.Email != "" {
+		dublicateEmail := repository.Get().User().ExistsEmail(req.Email, user.ID)
+		if !dublicateEmail {
+			return c.JSON(http.StatusBadRequest, helpers.Response(nil, "Bu E-mail kullanılmakta."))
+		}
+		user.Email = req.Email
+	}
+	if req.Description != "" {
+		user.UserDetail.Adress.Detail = req.Description
+	}
+	if req.Birthday != "" {
+		user.UserDetail.Birthday = req.Birthday
+	}
+	if req.Districtfk != 0 {
+		dublicateDist := repository.Get().Address().ExistsDistric(req.Districtfk)
+		if !dublicateDist {
+			return c.JSON(http.StatusBadRequest, helpers.Response(nil, "İlçe bilgisi bulunamadı."))
+		}
+		user.UserDetail.Adress.Districtfk = req.Districtfk
+	}
+
+	err := repository.Get().User().Update(user)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, helpers.Response(err, "hata var"))
+	}
+	return c.JSON(200, user)
 }
